# generic-weighted-random-assignment

./: .dockerignore  .gitignore  ALGORITHM.md  API.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-merge.yml  ci.yml  pr-automation.yml  release.yml
src/: lib.rs
src/api/: main.rs
src/cli/: main.rs
src/core/: algorithm.rs  mod.rs  models.rs  penalty.rs
src/engine/: mod.rs
src/infra/: config.rs  logging.rs  mod.rs
tests/: integration_tests.rs  property_tests.rs
