[package]
name = "weighted-random-assignment"
version = "0.1.0"
edition = "2021"
description = "A generic weighted random assignment engine with historical penalty support"
license = "MIT"
readme = "README.md"

[[bin]]
name = "wra-api"
path = "src/api/main.rs"

[[bin]]
name = "wra"
path = "src/cli/main.rs"

[lib]
name = "weighted_random_assignment"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
